[package]
name = "my-http-utils"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-extensions = { branch = "main", git = "https://github.com/MyJetTools/rust-extensions.git" }

tokio = { version = "*", features = ["full"] }
lazy_static = "*"
hyper = { version = "0.14", features = ["full"] }
serde = { version = "*", features = ["derive"] }
serde_json = "1.0"
async-trait = "*"
